--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,19 @@
   --white: #f0f8ff;
   --black: #090909;
 }
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+  background-color: var(--black);
+  color: var(--white);
+}
+section{
+  display: flex;
 }
 
